# fakepilot

./: .editorconfig  .flake8  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  python-app.yml  release.yml
doc/source/: conf.py
docs/: api.rst  changelog.rst  conf.py  index.rst  main-functionality.rst  requirements.txt  spelling_wordlist.txt
docs/source/: api.rst  conf.py  index.rst
fakepilot/: __init__.py  _xray.py  query.py  site.py  utils.py  xray.py
src/fakepilot/: .#utils.py  __init__.py  _xray.py  query.py  site.py  utils.py  xray.py
src/tests/: test_queries.py  test_queries.py~  test_xray.py
tests/: #test_site.py#  test_site.py  test_xray.py
tests/data/: beautytheshop.com.txt  beautytheshop.com_2025.txt  burgerking.no.txt  burgerking.no_2025.txt  djmania.es.htm  djmania.es_2025.txt  elejidoshopping.es.txt  elejidoshopping.es_2025.txt  sumeria.eu.txt  twenix.es.txt  twenix.es_2025.txt  valid_data.json  www.burgerking.dk.txt  www.burgerking.dk_2025.txt  www.burgerking.fr.txt  www.burgerking.fr_2025.txt  www.granada.no.htm  www.granada.no_2025.txt
