[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fakepilot"
description = "Scrapping tool for Trustpilot"
version = "25.05.1"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Carlos Romero Cruz", email = "phoenixsitegit@outlook.com"},
]
keywords = ["trustpilot", "scrapping", "beautifulsoup"]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "beautifulsoup4 >= 4.12",
]

[project.optional-dependencies]
lxml = ["lxml"]

[dependency-groups]
tests = ["nox"]

[project.urls]
Repository = "https://github.com/phoenixsite/fakepilot"
Issues = "https://github.com/phoenixsite/fakepilot/issues"
Documentation = "https://fakepilot.readthedocs.io/"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]
ignore = ["E203", "E501", "B008", "B904", "F401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.paths]
source = ["src", ".tox/3.*/**/site-packages/"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __str__",
  "raise NotImplementedError",
]
fail_under = 90

[tool.coverage.run]
branch = true
parallel = true
source = ["fakepilot"]

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-init-module = true
ignore-magic = true

[tool.pylint]
disable = [
  "duplicate-code",
  "logging-fstring-interpolation",
  "missing-class-docstring",
  "missing-module-docstring",
  "too-many-ancestors",
]

[tool.check-manifest]
ignore = ["uv.lock"]
